--- a/src/UserModels/CMakeLists.txt
+++ b/src/UserModels/CMakeLists.txt
@@ -4,5 +4,8 @@ qt_add_library(userModels STATIC
     user.h user.cpp
 )
 
-target_link_libraries(userModels PRIVATE Qt6::Core)
+
+message("User cmake")
+
+target_link_libraries(userModels PRIVATE Qt6::Core PRIVATE Qt6::Sql)
 target_include_directories(userModels INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
