Another test structure for consideration

--- a/src/Database/CMakeLists.txt
+++ b/src/Database/CMakeLists.txt
@@ -5,8 +5,7 @@ qt_add_library(databaseLib STATIC
     database.h database.cpp
 )
 
-
-message("Database cmake")
+add_subdirectory(tests)
 
 target_link_libraries(databaseLib PRIVATE Qt6::Core PRIVATE Qt6::Sql)
 target_include_directories(databaseLib INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
