--- a/src/Database/tests/CMakeLists.txt
+++ b/src/Database/tests/CMakeLists.txt
@@ -27,7 +27,6 @@
 #)
 
 
-
-#add_executable(DatabaseTest tst_databasetest.cpp)
-#add_test(NAME DatabaseTest COMMAND DatabaseTest)
-#target_link_libraries(DatabaseTest PRIVATE Qt::Test PRIVATE databaseLib PRIVATE Qt6::Sql)
+add_executable(DatabaseTest tst_databasetest.cpp)
+add_test(NAME DatabaseTest COMMAND DatabaseTest)
+target_link_libraries(DatabaseTest PRIVATE Qt::Test PRIVATE databaseLib PRIVATE Qt6::Sql)
