--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 
-add_subdirectory(UserModels)
-add_subdirectory(Database)
-#add_subdirectory(src)
+#add_subdirectory(UserModels)
+#add_subdirectory(DriverModels)
+add_subdirectory(Models)
+add_subdirectory(ComponentsClasses)
