First input field

--- a/qml/CMakeLists.txt
+++ b/qml/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(Buttons)
 add_subdirectory(Colors)
+add_subdirectory(InputFields)
 
 #list(APPEND QML_IMPORT_PATH "${CMAKE_CURRENT_LIST_DIR}/Buttons")
 
