--- a/qml/CMakeLists.txt
+++ b/qml/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(Buttons)
 add_subdirectory(Colors)
 add_subdirectory(InputFields)
+add_subdirectory(TabControls)
 
 #list(APPEND QML_IMPORT_PATH "${CMAKE_CURRENT_LIST_DIR}/Buttons")
 
