--- a/qml/CMakeLists.txt
+++ b/qml/CMakeLists.txt
@@ -2,6 +2,8 @@ add_subdirectory(Buttons)
 add_subdirectory(Colors)
 add_subdirectory(InputFields)
 add_subdirectory(TabControls)
+add_subdirectory(Tables)
+add_subdirectory(Calendar)
 
 #list(APPEND QML_IMPORT_PATH "${CMAKE_CURRENT_LIST_DIR}/Buttons")
 
