Tables and minor fixes

--- a/qml/Tables/CMakeLists.txt
+++ b/qml/Tables/CMakeLists.txt
@@ -13,4 +13,9 @@ qt_add_qml_module(TablesLib
     VERSION 1.0
     RESOURCE_PREFIX /TransportationApp.com/qml
     QML_FILES Pagination.qml
+    QML_FILES TableCell.qml
+    QML_FILES TableHeaderCell.qml
+    QML_FILES TableHeaders.qml
+    QML_FILES TableRow.qml
+    QML_FILES OrdersTable.qml
 )
