--- a/qml/CMakeLists.txt
+++ b/qml/CMakeLists.txt
@@ -5,6 +5,8 @@ add_subdirectory(TabControls)
 add_subdirectory(Tables)
 add_subdirectory(Calendar)
 add_subdirectory(Notifications)
+add_subdirectory(Tabs)
+add_subdirectory(Pages)
 
 #list(APPEND QML_IMPORT_PATH "${CMAKE_CURRENT_LIST_DIR}/Buttons")
 
