--- a/qml/Calendar/CMakeLists.txt
+++ b/qml/Calendar/CMakeLists.txt
@@ -13,7 +13,8 @@ qt_add_qml_module(CalendarLib
     VERSION 1.0
     RESOURCE_PREFIX /TransportationApp.com/qml
     QML_FILES Calendar.qml
-    QML_FILES AdditionalCalendar.qml
+    QML_FILES DateRangePicker.qml
     QML_FILES AdditionalButton.qml
     QML_FILES DatesUtils.js
+    QML_FILES DatePicker.qml
 )
