--- a/qml/Calendar/CMakeLists.txt
+++ b/qml/Calendar/CMakeLists.txt
@@ -6,6 +6,7 @@ target_link_libraries(CalendarLib
     PRIVATE Qt6::Quick
     PRIVATE ColorsLibplugin
     PRIVATE ButtonsLibplugin
+    PRIVATE UtilsLibplugin
 )
 
 qt_add_qml_module(CalendarLib
@@ -15,6 +16,5 @@ qt_add_qml_module(CalendarLib
     QML_FILES Calendar.qml
     QML_FILES DateRangePicker.qml
     QML_FILES AdditionalButton.qml
-    QML_FILES DatesUtils.js
     QML_FILES DatePicker.qml
 )
