--- a/qml/Tables/CMakeLists.txt
+++ b/qml/Tables/CMakeLists.txt
@@ -19,4 +19,5 @@ qt_add_qml_module(TablesLib
     QML_FILES TableRow.qml
     QML_FILES OrdersTable.qml
     QML_FILES TableBase.qml
+    QML_FILES CarsTable.qml
 )
