--- a/qml/Tabs/CMakeLists.txt
+++ b/qml/Tabs/CMakeLists.txt
@@ -18,5 +18,7 @@ qt_add_qml_module(TabsLib
     VERSION 1.0
     RESOURCE_PREFIX /TransportationApp.com/qml
     QML_FILES OrderTableTab.qml
-    QML_FILES OrderInfoPage.qml
+    QML_FILES OrderInfoTab.qml
+    QML_FILES CarTableTab.qml
+    QML_FILES CarInfoTab.qml
 )
