Just some planning stuff

--- a/src/Models/CMakeLists.txt
+++ b/src/Models/CMakeLists.txt
@@ -8,6 +8,7 @@ qt_add_library(
     orderstatusmodel.h orderstatusmodel.cpp
     drivingcategoriesmodel.h drivingcategoriesmodel.cpp
     ordersmodel.h ordersmodel.cpp
+    deliveriesmodel.h deliveriesmodel.cpp
 )
 
 
