--- a/qml/Tabs/CMakeLists.txt
+++ b/qml/Tabs/CMakeLists.txt
@@ -22,4 +22,6 @@ qt_add_qml_module(TabsLib
     QML_FILES CarTableTab.qml
     QML_FILES CarInfoTab.qml
     QML_FILES PlanningTab.qml
+    QML_FILES DriverTableTab.qml
+    QML_FILES DriverInfoTab.qml
 )
