--- a/qml/Tables/CMakeLists.txt
+++ b/qml/Tables/CMakeLists.txt
@@ -20,4 +20,5 @@ qt_add_qml_module(TablesLib
     QML_FILES OrdersTable.qml
     QML_FILES TableBase.qml
     QML_FILES CarsTable.qml
+    QML_FILES DriversTable.qml
 )
