--- a/qml/Tables/CMakeLists.txt
+++ b/qml/Tables/CMakeLists.txt
@@ -21,4 +21,5 @@ qt_add_qml_module(TablesLib
     QML_FILES TableBase.qml
     QML_FILES CarsTable.qml
     QML_FILES DriversTable.qml
+    QML_FILES DeliveriesTable.qml
 )
