--- a/qml/CMakeLists.txt
+++ b/qml/CMakeLists.txt
@@ -8,6 +8,7 @@ add_subdirectory(Notifications)
 add_subdirectory(Tabs)
 add_subdirectory(Pages)
 add_subdirectory(Utils)
+add_subdirectory(Map)
 
-#list(APPEND QML_IMPORT_PATH "${CMAKE_CURRENT_LIST_DIR}/Buttons")
+
 
