--- a/qml/InputFields/CMakeLists.txt
+++ b/qml/InputFields/CMakeLists.txt
@@ -20,4 +20,5 @@ qt_add_qml_module(InputFieldsLib
     QML_FILES ComboBoxInputField.qml
     QML_FILES DateInputField.qml
     QML_FILES DateRangeInputField.qml
+    QML_FILES SwitchInputField.qml
 )
